fix spacing

--- a/modules/costs/app/components/time_entries/entry_dialog_component.sass
+++ b/modules/costs/app/components/time_entries/entry_dialog_component.sass
@@ -30,3 +30,10 @@
 
 .time-entry-dialog-footer-buttons
   width: 100%
+
+.time-entry-button-push
+  margin-left: auto
+
+
+.time-entry-dialog-form-spacing
+  row-gap: var(--stack-gap-normal)
